@@ -1,3 +1,9 @@
+version <unreleased>
+
+Extractors
++ [generic] Add support for ISM manifests
+
+
 version 2016.11.02
 
 Core
